--- a/Final_Project_Prototype4/step2.html
+++ b/Final_Project_Prototype4/step2.html
@@ -45,9 +45,14 @@
               Perfect for sheet-pan dinners, casseroles, and baked veggies.
               Turn this on if you have access to a working oven.
             </p>
-            <label class="switch">
-                <input type="checkbox" class="switch-input" data-tool="oven">
-                <span class="switch-track"></span>
+           <label class="fancy-toggle">
+            <input type="checkbox" class="fancy-toggle__input" data-tool="oven">
+                <span class="fancy-toggle__track">
+                    <span class="fancy-toggle__burst"></span>
+                    <span class="fancy-toggle__thumb">
+                    <span class="fancy-toggle__icon"></span>
+                    </span>
+                </span>
             </label>
           </div>
         </div>
@@ -67,12 +72,18 @@
               Great for stir-fries, quick sautés, and one-pan leftover meals.
               Turn this on if you can cook on the stove.
             </p>
-            <label class="switch">
-                <input type="checkbox" class="switch-input" data-tool="oven">
-                <span class="switch-track"></span>
+            <label class="fancy-toggle">
+            <input type="checkbox" class="fancy-toggle__input" data-tool="oven">
+                <span class="fancy-toggle__track">
+                    <span class="fancy-toggle__burst"></span>
+                    <span class="fancy-toggle__thumb">
+                    <span class="fancy-toggle__icon"></span>
+                    </span>
+                </span>
             </label>
           </div>
         </div>
+
 
         <!-- Tool 3: Microwave -->
         <div class="card swiper-slide">
@@ -89,9 +100,14 @@
               For dorm-friendly recipes, reheats, and quick mug meals.
               Turn this on if you have a microwave.
             </p>
-           <label class="switch">
-                <input type="checkbox" class="switch-input" data-tool="oven">
-                <span class="switch-track"></span>
+            <label class="fancy-toggle">
+            <input type="checkbox" class="fancy-toggle__input" data-tool="oven">
+                <span class="fancy-toggle__track">
+                    <span class="fancy-toggle__burst"></span>
+                    <span class="fancy-toggle__thumb">
+                    <span class="fancy-toggle__icon"></span>
+                    </span>
+                </span>
             </label>
           </div>
         </div>
@@ -111,9 +127,14 @@
               Crispy leftovers with less oil — fries, veggies, and more.
               Turn this on if you own an air fryer.
             </p>
-            <label class="switch">
-                <input type="checkbox" class="switch-input" data-tool="oven">
-                <span class="switch-track"></span>
+            <label class="fancy-toggle">
+            <input type="checkbox" class="fancy-toggle__input" data-tool="oven">
+                <span class="fancy-toggle__track">
+                    <span class="fancy-toggle__burst"></span>
+                    <span class="fancy-toggle__thumb">
+                    <span class="fancy-toggle__icon"></span>
+                    </span>
+                </span>
             </label>
           </div>
         </div>
@@ -133,9 +154,14 @@
               Not just for rice — great for one-pot soups and steamed dishes.
               Turn this on if you have a rice cooker.
             </p>
-            <label class="switch">
-                <input type="checkbox" class="switch-input" data-tool="oven">
-                <span class="switch-track"></span>
+            <label class="fancy-toggle">
+            <input type="checkbox" class="fancy-toggle__input" data-tool="oven">
+                <span class="fancy-toggle__track">
+                    <span class="fancy-toggle__burst"></span>
+                    <span class="fancy-toggle__thumb">
+                    <span class="fancy-toggle__icon"></span>
+                    </span>
+                </span>
             </label>
           </div>
         </div>
@@ -155,9 +181,14 @@
               For salads, sandwiches, and snacks that use no heat at all.
               Turn this on if you only have a knife and fridge.
             </p>
-           <label class="switch">
-                <input type="checkbox" class="switch-input" data-tool="oven">
-                <span class="switch-track"></span>
+            <label class="fancy-toggle">
+            <input type="checkbox" class="fancy-toggle__input" data-tool="oven">
+                <span class="fancy-toggle__track">
+                    <span class="fancy-toggle__burst"></span>
+                    <span class="fancy-toggle__thumb">
+                    <span class="fancy-toggle__icon"></span>
+                    </span>
+                </span>
             </label>
           </div>
         </div>
