--- a/Final_Project_Prototype4/home.html
+++ b/Final_Project_Prototype4/home.html
@@ -30,9 +30,9 @@
             <img src="images/home_icon.png" alt="" />
             <span>Home</span>
           </a>
-          <a href="Recipe.html" class="nav-item">
-            <img src="images/recipes.png" alt="" />
-            <span>Recipes</span>
+          <a href="step1.html" class="nav-link">
+            <img src="images/recipes.png" alt="" class="icon recipes-icon">
+            Recipes
           </a>
           <a href="impact.html" class="nav-item">
             <img src="images/impact_score.png" alt="" />
