--- a/Final_Project_Prototype4/step1.html
+++ b/Final_Project_Prototype4/step1.html
@@ -1,16 +1,353 @@
-<body>
-    <header class="tools-header">
-      <p class="step-count">1 of 2 steps</p>
-      <h1 class="tools-title">Select your leftover materials</h1>
-   
-      <div class="next-step-wrapper">
-          <button class="next-step-btn" onclick="goToStep2()">Next Step</button>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LeftoverChef – Recipes</title>
+
+    <!-- Step 1 / Recipes styles -->
+    <link rel="stylesheet" href="style/step1.css" />
+    <link rel="stylesheet" href="style/nav.css" />
+  </head>
+
+  <body>
+    <!-- NAVBAR -->
+    <header class="site-header">
+      <div class="nav-wrapper">
+        <a href="home.html" class="brand">
+          <img
+            src="images/logo_no_text.png"
+            alt="LeftoverChef logo"
+            class="brand-logo"
+          />
+          <span class="brand-name">LeftoverChef</span>
+        </a>
+
+        <button class="nav-toggle" aria-label="Toggle navigation">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+
+        <div class="main-nav">
+          <a href="home.html" class="nav-item">
+            <img src="images/home_icon.png" alt="" />
+            <span>Home</span>
+          </a>
+
+          <!-- Recipes is active on this page -->
+          <a href="step1.html" class="nav-item active">
+            <img src="images/recipes.png" alt="" class="icon recipes-icon" />
+            <span>Recipes</span>
+          </a>
+
+          <a href="impact.html" class="nav-item">
+            <img src="images/impact_score.png" alt="" />
+            <span>Impact Score</span>
+          </a>
+
+          <a href="help.html" class="nav-item">
+            <img src="images/help.png" alt="" />
+            <span>Help</span>
+          </a>
+
+          <a href="account.html" class="nav-item">
+            <img src="images/account.png" alt="" />
+            <span>Account</span>
+          </a>
+        </div>
       </div>
     </header>
 
+    <!-- MAIN CONTENT -->
+    <main class="page recipe-page" role="main">
+      <!-- STEP 1 CARD (two-column layout) -->
+      <section
+        class="card hero-card"
+        aria-label="Add ingredients to get recipes"
+      >
+        <!-- Left side text -->
+        <div class="hero-left">
+          <h2>Start with what you already have</h2>
+          <p>
+            Type in your leftover ingredients and pantry items. LeftoverChef
+            suggests quick recipes so you waste less food and save more money.
+          </p>
+          <ul class="hero-highlights">
+            <li>✔ AI ideas from your real fridge</li>
+            <li>✔ Filters for time, diet, and equipment</li>
+            <li>✔ Points for every leftover you save</li>
+          </ul>
+        </div>
+
+        <!-- Right side: Step 1 UI -->
+        <div class="hero-right">
+          <p class="step-label">Step 1 · Add ingredients</p>
+
+          <form
+            id="ing-form"
+            class="ing-form"
+            aria-describedby="ing-help ing-error"
+          >
+            <label for="ing-input" class="sr-only">Ingredient</label>
+<br>
+            <input
+              id="ing-input"
+              name="ingredient"
+              type="text"
+              autocomplete="off"
+              placeholder="e.g., chicken, rice, spinach"
+              aria-label="Ingredient input"
+            />
+
+            <div class="ing-buttons">
+              <button type="submit" id="add-btn" class="btn primary">
+                Add ingredient
+              </button>
+              <button type="button" id="clear-btn" class="btn ghost">
+                Clear all
+              </button>
+            </div>
+
+            <p id="ing-help" class="help">
+              Paste a list like <em>“onion, eggs, spinach”</em> or press
+              <kbd>/</kbd> to jump here.
+            </p>
+
+            <!-- Bold black error line -->
+            <p id="ing-error" class="error" aria-live="polite"></p>
+          </form>
+
+          <!-- Chips -->
+          <ul
+            id="pantry-list"
+            class="chips"
+            aria-live="polite"
+            aria-label="Current pantry list"
+          ></ul>
+
+          <p class="help help-secondary" id="sample-note">
+            We preloaded a few sample ingredients so you can see how
+            LeftoverChef works and you can clear or replace them any time.
+          </p>
+        </div>
+      </section>
+
+      <!-- STEP 3 · FULL-WIDTH CARD UNDER STEP 1 -->
+      <section class="card step3-card" id="step3">
+        <div class="step3-header">
+          <p class="step-label">Step 3 · Get AI recipes</p>
+          <h2>Recipe suggestions</h2>
+          <p class="step3-subtitle">
+            We highlight recipes that use the most of what you already have.
+          </p>
+
+          <button type="button" class="btn primary" id="suggest-btn">
+            Suggest recipes
+          </button>
+
+          <p class="help" id="recipe-results-help">
+            When you’re ready, click <strong>Suggest recipes</strong> to see
+            ideas.
+          </p>
+        </div>
+
+        <!-- where suggestions will appear -->
+        <ul
+          id="recipe-results"
+          class="recipe-results"
+          aria-live="polite"
+        ></ul>
+      </section>
+    </main>
+
+    <!-- Toast (for undo after Clear all) -->
+    <div id="toast" class="toast" aria-live="polite"></div>
+
+    <!-- STEP 1 + STEP 3 BEHAVIOR SCRIPT -->
     <script>
-      function goToStep2() {
-        window.location.href = "step2.html";
+      const pantry = new Set();
+      const pantryList = document.getElementById("pantry-list");
+      const ingInput = document.getElementById("ing-input");
+      const ingForm = document.getElementById("ing-form");
+      const ingError = document.getElementById("ing-error");
+      const clearBtn = document.getElementById("clear-btn");
+      const toast = document.getElementById("toast");
+      let lastPantrySnapshot = null;
+
+      function renderPantry() {
+        pantryList.innerHTML = "";
+        pantry.forEach((item) => {
+          const li = document.createElement("li");
+          li.innerHTML =
+            "<span>" +
+            item +
+            '</span><button type="button" aria-label="Remove ' +
+            item +
+            '">×</button>';
+
+          li.querySelector("button").addEventListener("click", () => {
+            pantry.delete(item);
+            renderPantry();
+          });
+
+          pantryList.appendChild(li);
+        });
       }
+
+      function showToast(message, options = {}) {
+        if (!toast) return;
+        toast.textContent = message;
+        toast.classList.add("show");
+
+        toast.onclick = null;
+        if (options.onClick) {
+          toast.onclick = () => {
+            options.onClick();
+            hideToast();
+          };
+        }
+
+        if (options.duration !== 0) {
+          const timeout = options.duration || 4000;
+          setTimeout(hideToast, timeout);
+        }
+      }
+
+      function hideToast() {
+        if (!toast) return;
+        toast.classList.remove("show");
+        toast.onclick = null;
+      }
+
+      function addFromText(text) {
+        if (!text) return;
+        text
+          .split(",")
+          .map((s) => s.trim().toLowerCase())
+          .filter(Boolean)
+          .forEach((t) => pantry.add(t));
+        renderPantry();
+      }
+
+      // Submit handler
+      ingForm.addEventListener("submit", (e) => {
+        e.preventDefault();
+        const raw = ingInput.value.trim();
+
+        if (!raw) {
+          ingError.textContent =
+            "Please enter at least one ingredient before adding.";
+          ingInput.focus();
+          return;
+        }
+
+        ingError.textContent = "";
+        addFromText(raw);
+        ingInput.value = "";
+        ingInput.focus();
+      });
+
+      // Clear all button
+      clearBtn.addEventListener("click", () => {
+        if (pantry.size === 0) return;
+
+        lastPantrySnapshot = Array.from(pantry);
+        pantry.clear();
+        renderPantry();
+
+        showToast("Pantry cleared. Click here to undo.", {
+          onClick: () => {
+            pantry.clear();
+            lastPantrySnapshot.forEach((item) => pantry.add(item));
+            renderPantry();
+            lastPantrySnapshot = null;
+          },
+        });
+      });
+
+      // "/" key focuses the input
+      document.addEventListener("keydown", (e) => {
+        if (e.key === "/") {
+          e.preventDefault();
+          ingInput.focus();
+        }
+      });
+
+      // Preload sample chips
+      ["rice", "egg", "onion"].forEach(addFromText);
+
+      // -------- STEP 3 RECIPE SUGGESTIONS --------
+      const recipes = [
+        {
+          name: "Veggie Fried Rice",
+          ingredients: ["rice", "egg", "onion", "peas", "carrot", "soy sauce"],
+        },
+        {
+          name: "Simple Omelette",
+          ingredients: ["egg", "onion", "cheese", "butter"],
+        },
+        {
+          name: "Garlic Rice Bowl",
+          ingredients: ["rice", "onion", "garlic", "oil"],
+        },
+        {
+          name: "Stir-Fry Leftover Bowl",
+          ingredients: ["rice", "egg", "onion", "soy sauce", "mixed veggies"],
+        },
+      ];
+
+      const suggestBtn = document.getElementById("suggest-btn");
+      const resultsList = document.getElementById("recipe-results");
+      const resultsHelp = document.getElementById("recipe-results-help");
+
+      function suggestRecipes() {
+        const scored = recipes
+          .map((r) => {
+            const matches = r.ingredients.filter((ing) => pantry.has(ing));
+            return {
+              ...r,
+              matches,
+              matchCount: matches.length,
+            };
+          })
+          .filter((r) => r.matchCount > 0)
+          .sort((a, b) => b.matchCount - a.matchCount);
+
+        resultsList.innerHTML = "";
+
+        if (scored.length === 0) {
+          resultsHelp.textContent =
+            "We couldn’t find any recipes using what you’ve added yet. Try adding a few more ingredients.";
+          return;
+        }
+
+        resultsHelp.textContent =
+          "Here are some ideas that use the most of what you already have:";
+
+        scored.forEach((recipe) => {
+          const missing = recipe.ingredients.filter((ing) => !pantry.has(ing));
+
+          const li = document.createElement("li");
+          li.className = "recipe-card";
+          li.innerHTML = `
+            <h4>${recipe.name}</h4>
+            <p><strong>Uses from your pantry:</strong> ${recipe.matches.join(
+              ", "
+            )}</p>
+            <p class="recipe-missing">
+              ${
+                missing.length
+                  ? "You’d also need: " + missing.join(", ")
+                  : "You already have everything!"
+              }
+            </p>
+          `;
+          resultsList.appendChild(li);
+        });
+      }
+
+      suggestBtn.addEventListener("click", suggestRecipes);
     </script>
-</body>
+  </body>
+</html>
