--- a/Final_Project_Prototype4/account.html
+++ b/Final_Project_Prototype4/account.html
@@ -31,7 +31,7 @@
                 </a>
                 <a href="step1.html" class="nav-link">
                     <img src="images/recipes.png" alt="" class="icon recipes-icon">
-                    Recipes
+                    <span>Recipes</span>
                   </a>
                   
                 <a href="impact.html" class="nav-item">
