fixed home screen video

--- a/Final_Project_Prototype4/help.html
+++ b/Final_Project_Prototype4/help.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Help – LeftoverChef</title>
+  <title>LeftoverChef | Help</title>
 
   <!-- FIRST load navbar styling -->
   <link rel="stylesheet" href="style/nav.css" />
