--- a/Final_Project_Prototype4/home.html
+++ b/Final_Project_Prototype4/home.html
@@ -12,51 +12,54 @@
 </head>
 
 <body>
-    <header class="site-header">
-      <div class="nav-wrapper">
-        <a href="home.html" class="brand">
-          <img src="images/logo_no_text.png" alt="LeftoverChef logo" class="brand-logo" />
-          <span class="brand-name">LeftoverChef</span>
+  <video autoplay muted loop playsinline id="bg-video">
+    <source src="images/home.mp4" type="video/mp4" />
+  </video>
+  <header class="site-header">
+    <div class="nav-wrapper">
+      <a href="home.html" class="brand">
+        <img src="images/logo_no_text.png" alt="LeftoverChef logo" class="brand-logo" />
+        <span class="brand-name">LeftoverChef</span>
+      </a>
+
+      <button class="nav-toggle" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+
+      <div class="main-nav">
+        <a href="home.html" class="nav-item active">
+          <img src="images/home_icon.png" alt="" />
+          <span>Home</span>
         </a>
-
-        <button class="nav-toggle" aria-label="Toggle navigation">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-
-        <div class="main-nav">
-          <a href="home.html" class="nav-item active">
-            <img src="images/home_icon.png" alt="" />
-            <span>Home</span>
-          </a>
-          <a href="step1.html" class="nav-link">
-            <img src="images/recipes.png" alt="" class="icon recipes-icon">
-            <span>Recipes</span>
-          </a>
-          <a href="impact.html" class="nav-item">
-            <img src="images/impact_score.png" alt="" />
-            <span>Impact Score</span>
-          </a>
-          <a href="help.html" class="nav-item">
-            <img src="images/help.png" alt="" />
-            <span>Help</span>
-          </a>
-          <a href="account.html" class="nav-item">
-            <img src="images/account.png" alt="" />
-            <span>Account</span>
-          </a>
-        </div>
-      </div>
-      <div class="hero">
-        <h2>ENJOY THE</h2>
-        <p> </p>
-        <h1>FOOD</h1>
-        <a href="step1.html">
-          <button>Cook Now</button>
+        <a href="step1.html" class="nav-link">
+          <img src="images/recipes.png" alt="" class="icon recipes-icon">
+          <span>Recipes</span>
+        </a>
+        <a href="impact.html" class="nav-item">
+          <img src="images/impact_score.png" alt="" />
+          <span>Impact Score</span>
+        </a>
+        <a href="help.html" class="nav-item">
+          <img src="images/help.png" alt="" />
+          <span>Help</span>
+        </a>
+        <a href="account.html" class="nav-item">
+          <img src="images/account.png" alt="" />
+          <span>Account</span>
         </a>
       </div>
-    </header>
+    </div>
+    <div class="hero">
+      <h2>ENJOY THE</h2>
+      <p> </p>
+      <h1>FOOD</h1>
+      <a href="step1.html">
+        <button>Cook Now</button>
+      </a>
+    </div>
+  </header>
 </body>
 <script src="dist/nav.js"></script>
 
