--- a/Final_Project_Prototype4/impact.html
+++ b/Final_Project_Prototype4/impact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Impact Score – LeftoverChef</title>
+  <title>LeftoverChef | Impact Score</title>
   <link rel="stylesheet" href="style/nav.css">
   <link rel="stylesheet" href="style/help.css">
   <link rel="stylesheet" href="style/impact.css">
@@ -81,7 +81,6 @@
       <div class="badge-card">💰 Money Saver</div>
     </div>
 
-    <!-- Dynamic Tips -->
     <h2>Tips & Challenges</h2>
     <div class="tips-box">
       <p id="tipText">Loading your tips…</p>
