--- a/Final_Project_Prototype4/step1.html
+++ b/Final_Project_Prototype4/step1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LeftoverChef – Recipes</title>
+  <title>LeftoverChef | Recipes</title>
 
   <!-- Step 1 / Recipes styles -->
   <link rel="stylesheet" href="style/step1.css" />
