--- a/Final_Project_Prototype4/landing.html
+++ b/Final_Project_Prototype4/landing.html
@@ -39,7 +39,7 @@
       </ul>
 
       <div class="header__btn sr-cta">
-        <button onclick="window.location.href='step1.html'">Start Cooking</button>
+        <button onclick="window.location.href='home.html'">Start Cooking</button>
       </div>
     </div>
   </header>
