added confirm prompt

--- a/Final_Project_Prototype4/step1.html
+++ b/Final_Project_Prototype4/step1.html
@@ -403,6 +403,8 @@
     // Clear all button
     clearBtn.addEventListener("click", () => {
       if (pantry.size === 0) return;
+      const confirmed = confirm("Are you sure you want to clear all ingredients?");
+      if (!confirmed) return;
 
       lastPantrySnapshot = Array.from(pantry);
       pantry.clear();
